--- a/src/index.html
+++ b/src/index.html
@@ -44,6 +44,20 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <section class="promo">
+        <div class="container">
+            <div class="title title_fs16">
+                Мене звати Олег Сазонов
+            </div>
+            <h1 class="title title_fs48 promo__title">
+                Я web-розробник з міста Хмельницький
+            </h1>
+            <div class="promo__btns">
+                <a href="#" class="promo__link btn">Портфоліо</a>
+                <a href="#" class="promo__link">Про мене</a>
+            </div>
+        </div>
+    </section>
 
     <script src="js/script.js"></script>
 </body>
