--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,16 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+    <aside class="sidepanel">
+        <a href="#" class="sidepanel__link"><img src="icons/social/viber.svg" alt="viber"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/telegram.svg" alt="telegram"></a>
+        <a href="#" class="sidepanel__link"><img src="icons/social/github.svg" alt="github"></a>
+        <div class="sidepanel__divider"></div>
+        <div class="sidepanel__text"><span>Зв'язок зі мною</span></div>
+    </aside>
     <section class="promo">
         <div class="container">
-            <div class="title title_fs16">
+            <div class="title title_fs16 promo__subtitle">
                 Мене звати Олег Сазонов
             </div>
             <h1 class="title title_fs48 promo__title">
@@ -54,7 +61,7 @@
             </h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">Портфоліо</a>
-                <a href="#" class="promo__link">Про мене</a>
+                <a href="#" class="promo__link promo__link_white btn btn_hidden">Про мене</a>
             </div>
         </div>
     </section>
