add hamburger (html + scss)

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,11 @@
         <div class="sidepanel__text"><span>Зв'язок зі мною</span></div>
     </aside>
     <section class="promo">
+        <div class="hamburger">
+            <span></span>
+            <span class="long"></span>
+            <span></span>
+          </div>
         <div class="container">
             <div class="title title_fs16 promo__subtitle">
                 Мене звати Олег Сазонов
@@ -61,7 +66,8 @@
             </h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">Портфоліо</a>
-                <a href="#" class="promo__link promo__link_white btn btn_hidden">Про мене</a>
+                <!-- promo__link_white should use with 'white text' promo_link -->
+                <a href="#" class="promo__link btn btn_hidden">Про мене</a>
             </div>
         </div>
     </section>
