--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,6 @@
                     <path d="M17.1568 14.5231L28.4489 3.23075C29.1837 2.49623 29.1837 1.30861 28.4489 0.574085C27.7144 -0.160437 26.5267 -0.160437 25.7922 0.574085L14.4998 11.8665L3.20781 0.574085C2.47295 -0.160437 1.28567 -0.160437 0.551149 0.574085C-0.183716 1.30861 -0.183716 2.49623 0.551149 3.23075L11.8432 14.5231L0.551149 25.8155C-0.183716 26.55 -0.183716 27.7376 0.551149 28.4721C0.917206 28.8385 1.39852 29.0226 1.87948 29.0226C2.36045 29.0226 2.84141 28.8385 3.20781 28.4721L14.4998 17.1798L25.7922 28.4721C26.1586 28.8385 26.6396 29.0226 27.1205 29.0226C27.6015 29.0226 28.0825 28.8385 28.4489 28.4721C29.1837 27.7376 29.1837 26.55 28.4489 25.8155L17.1568 14.5231Z" fill="black"/>
                   </svg>
             </div>
-
             <nav>
                 <ul class="menu__list">
                     <li class="menu__item"><a href="#">ПРО МЕНЕ</a></li>
@@ -70,7 +69,6 @@
                     <li class="menu__item"><a href="#">КОНТАКТИ</a></li>
                 </ul>
             </nav>
-
             <div class="menu__social">
                 <a href="#" class="social"><img src="icons/social/github.svg" alt="viber"></a>
                 <a href="#" class="social"><img src="icons/social/telegram.svg" alt="telegram"></a>
@@ -80,6 +78,7 @@
         <div class="menu__overlay"></div>
 
     </div>
+
     <section class="promo">
         <div class="hamburger">
             <span></span>
@@ -97,6 +96,47 @@
                 <a href="#" class="promo__link btn">Портфоліо</a>
                 <!-- promo__link_white should use with 'white text' promo_link -->
                 <a href="#" class="promo__link btn btn_hidden">Про мене</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="container about-me">
+        <div id="about-me__item_first" class="about-me__item">
+            <img src="img/main_photo.jpg" alt="me">
+        </div>
+        <div id="about-me__item_second" class="about-me__item">
+            <div class="title title_fs16 about-me__item-subtitle">
+                Про мене
+            </div>
+            <div class="title about-me__item-title">
+                Мене звати Олег
+            </div>
+            <div class="about-me__item-divider"></div>
+            <div class="about-me__item-descr">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+            </div>
+        </div>
+        <div id="about-me__item_third" class="about-me__item">
+            <div class="grid">
+                <img class="grid__img" src="icons/about_me/web development.svg" alt="web">
+                <div class="title title_fs14">Web-розробка</div>
+                <div class="descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
+            </div>
+            <div class="grid">
+                <img class="grid__img" src="icons/about_me/mobile_dev.svg" alt="mobile">
+                <div class="title title_fs14">Розробка додатків</div>
+                <div class="descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
+            </div>
+            <div class="grid">
+                <img class="grid__img" src="icons/about_me/design.svg" alt="design">
+                <div class="title title_fs14">UI/UX Design</div>
+                <div class="descr">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </div>
             </div>
         </div>
     </section>
