update about-me (html + scss); add grid-elem(scss)

--- a/src/index.html
+++ b/src/index.html
@@ -117,24 +117,30 @@
             </div>
         </div>
         <div id="about-me__item_third" class="about-me__item">
-            <div class="grid">
-                <img class="grid__img" src="icons/about_me/web development.svg" alt="web">
-                <div class="title title_fs14">Web-розробка</div>
-                <div class="descr">
+            <div class="grid-elem">
+                <div class="grid-elem__img">
+                    <img src="icons/about_me/web development.svg" alt="web">
+                </div>
+                <div class="title title_fs14 grid-elem__title">Web-розробка</div>
+                <div class="grid-elem__descr">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-            <div class="grid">
-                <img class="grid__img" src="icons/about_me/mobile_dev.svg" alt="mobile">
-                <div class="title title_fs14">Розробка додатків</div>
-                <div class="descr">
+            <div class="grid-elem">
+                <div class="grid-elem__img">
+                    <img src="icons/about_me/mobile_dev.svg" alt="mobile">
+                </div>
+                <div class="title title_fs14 grid-elem__title">Розробка додатків</div>
+                <div class="grid-elem__descr">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
-            <div class="grid">
-                <img class="grid__img" src="icons/about_me/design.svg" alt="design">
-                <div class="title title_fs14">UI/UX Design</div>
-                <div class="descr">
+            <div class="grid-elem">
+                <div class="grid-elem__img">
+                    <img src="icons/about_me/design.svg" alt="design">
+                </div>
+                <div class="title title_fs14 grid-elem__title">UI/UX Design</div>
+                <div class="grid-elem__descr">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 </div>
             </div>
