--- a/src/index.html
+++ b/src/index.html
@@ -100,48 +100,58 @@
         </div>
     </section>
 
-    <section class="container about-me">
-        <div id="about-me__item_first" class="about-me__item">
-            <img src="img/main_photo.jpg" alt="me">
-        </div>
-        <div id="about-me__item_second" class="about-me__item">
-            <div class="title title_fs16 about-me__item-subtitle">
-                Про мене
-            </div>
-            <div class="title about-me__item-title">
-                Мене звати Олег
-            </div>
-            <div class="about-me__item-divider"></div>
-            <div class="about-me__item-descr">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
-            </div>
-        </div>
-        <div id="about-me__item_third" class="about-me__item">
-            <div class="grid-elem">
-                <div class="grid-elem__img">
-                    <img src="icons/about_me/web development.svg" alt="web">
+    <section class="about-me">
+        <div class="container">
+            <div class="about-me__wrapper">
+                <div class="about-me__photo">
+                    <img src="img/main_photo.jpg" alt="me">
                 </div>
-                <div class="title title_fs14 grid-elem__title">Web-розробка</div>
-                <div class="grid-elem__descr">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                <div class="about-me__descr">
+                    <h2 class="title title_fs16 about-me__title">
+                        Про мене
+                    </h2>
+                    <div class="title about-me__subtitle">
+                        Мене звати Олег
+                    </div>
+                    <div class="divider"></div>
+                    <p class="about-me__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
                 </div>
-            </div>
-            <div class="grid-elem">
-                <div class="grid-elem__img">
-                    <img src="icons/about_me/mobile_dev.svg" alt="mobile">
-                </div>
-                <div class="title title_fs14 grid-elem__title">Розробка додатків</div>
-                <div class="grid-elem__descr">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                </div>
-            </div>
-            <div class="grid-elem">
-                <div class="grid-elem__img">
-                    <img src="icons/about_me/design.svg" alt="design">
-                </div>
-                <div class="title title_fs14 grid-elem__title">UI/UX Design</div>
-                <div class="grid-elem__descr">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                <div class="about-me__skills">
+                    <div class="grid-elem">
+                        <div class="grid-elem__img">
+                            <img src="icons/about_me/web development.svg" alt="web">
+                        </div>
+                        <div>
+                            <div class="title title_fs14">Web-розробка</div>
+                            <div class="grid-elem__descr">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-elem">
+                        <div class="grid-elem__img">
+                            <img src="icons/about_me/mobile_dev.svg" alt="mobile">
+                        </div>
+                        <div>
+                            <div class="title title_fs14">Розробка додатків</div>
+                            <div class="grid-elem__descr">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="grid-elem">
+                        <div class="grid-elem__img">
+                            <img src="icons/about_me/design.svg" alt="design">
+                        </div>
+                        <div>
+                            <div class="title title_fs14">UI/UX Design</div>
+                            <div class="grid-elem__descr">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
