--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,93 @@
         </div>
     </section>
 
+    <section class="experience">
+        <div class="container">
+            <h2 class="title title_fs16 experience__title">Досвід</h2>
+            <div class="title experience__subtitle">
+                Чим я буду корисний
+            </div>
+            <div class="divider divider_center"></div>
+
+            <div class="experience__wrapper">
+                <div class="experience__column">
+                    <h3 class="title title_fs20 experience__column-title">Освіта</h3>
+                    <ul>
+                        <li>
+                            <div class="experience__item">
+                                <div class="experience__item-head">
+                                    <div class="experience__item-icon">
+                                        <img src="icons/experience/university.svg" alt="university">
+                                    </div>
+                                    <div class="title title_fs14 experience__item-title">ХНУ ім. В.Н.Каразіна
+                                    </div>
+                                    <div class="title title_fs12 experience__item-subtitle"> Диплом магістра | (2011-2017)
+                                    </div>
+                                </div>
+                                <div class="experience__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience__item">
+                                <div class="experience__item-head">
+                                    <div class="experience__item-icon">
+                                        <img src="icons/experience/courses.svg" alt="university">
+                                    </div>
+                                    <div class="title title_fs14 experience__item-title">Udemy
+                                    </div>
+                                    <div class="title title_fs12 experience__item-subtitle"> Курси по Web-розробці
+                                    </div>
+                                </div>
+                                <div class="experience__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="experience__column">
+                    <h3 class="title title_fs20 experience__column-title">Досвід роботи</h3>
+                    <ul>
+                        <li>
+                            <div class="experience__item">
+                                <div class="experience__item-head">
+                                    <div class="experience__item-icon">
+                                        <img src="icons/experience/developer.svg" alt="university">
+                                    </div>
+                                    <div class="title title_fs14 experience__item-title">Front-End Developer
+                                    </div>
+                                    <div class="title title_fs12 experience__item-subtitle"> EPAM | Москва (2018-2019)
+                                    </div>
+                                </div>
+                                <div class="experience__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="experience__item">
+                                <div class="experience__item-head">
+                                    <div class="experience__item-icon">
+                                        <img src="icons/experience/designer.svg" alt="university">
+                                    </div>
+                                    <div class="title title_fs14 experience__item-title">UI/UX Designer
+                                    </div>
+                                    <div class="title title_fs12 experience__item-subtitle"> Squad Team | Москва (2018)
+                                    </div>
+                                </div>
+                                <div class="experience__item-body">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmo. 
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="js/script.js"></script>
 </body>
 </html>
