add skills (html)

--- a/src/index.html
+++ b/src/index.html
@@ -244,6 +244,131 @@
         </div>
     </section>
 
+    <section class="skills">
+        <div class="container">
+            <h2 class="title title_fs16 skills__title">Навички</h2>
+            <div class="title skills__subtitle">
+                Що я використовую в роботі
+            </div>
+            <div class="divider divider_center"></div>
+
+            <div class="skills__grid">
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/html5.svg" alt="html5"></div>
+                    <div class="title title_fs14 skills__item-title">HTML5</div>
+                    <div class="skills__item-descr">
+                        Саме він створює каркас вашого сайту або застосунку, а п'ята версія дасть мені змогу створювати більш SEO-оптимізовану структуру вашого продукту
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/css3.svg" alt="css3"></div>
+                    <div class="title title_fs14 skills__item-title">CSS3</div>
+                    <div class="skills__item-descr">
+                        Ця мова стилів дає мені змогу створювати абсолютно будь-який зовнішній вигляд вашого сайту або програми. Все обмежується тільки вашою фантазією!
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/JS.svg" alt="js"></div>
+                    <div class="title title_fs14 skills__item-title">Java Script</div>
+                    <div class="skills__item-descr">
+                        Ця мова програмування дає змогу оживити все що завгодно: слайдери, вікна, підказки, вкладки, отримання даних від сервера і багато іншого
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/jquery.svg" alt="jquery"></div>
+                    <div class="title title_fs14 skills__item-title">Jquery</div>
+                    <div class="skills__item-descr">
+                        Бібліотека Jquery дасть змогу прискорити розробку. Без необхідності інтегрувати в проєкт ми її не будемо, але навичка роботи з нею присутня
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/react.svg" alt="react"></div>
+                    <div class="title title_fs14 skills__item-title">React</div>
+                    <div class="skills__item-descr">
+                        Ця бібліотека дає змогу створювати web-додатки. Ми можемо створити максимально інтерактивний продукт саме під ваші цілі
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/node.svg" alt="node"></div>
+                    <div class="title title_fs14 skills__item-title">Node.js</div>
+                    <div class="skills__item-descr">
+                        Ця платформа дає змогу створювати бекенд для вашого продукту - "мізки", які виконуватимуть дії, які користувач не бачить
+                    </div>
+                </div>
+                <div class="skills__item">
+                    <div class="skills__item-img">
+                        <img src="icons/skills/mongoDB.svg" alt="mongoDB"></div>
+                    <div class="title title_fs14 skills__item-title">Mongo.db</div>
+                    <div class="skills__item-descr">
+                        Це нереляційна база даних, яка буде зберігати дані вашого сайту або програми
+                    </div>
+                </div>
+            </div>
+
+            <div class="skills__info">
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Створення сайтів
+                    </div>
+                    <div class="skills__rate-percent">100%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Створення додатків
+                    </div>
+                    <div class="skills__rate-percent">85%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Робота з даними
+                    </div>
+                    <div class="skills__rate-percent">90%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Креативність
+                    </div>
+                    <div class="skills__rate-percent">75%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Створення дизайну
+                    </div>
+                    <div class="skills__rate-percent">90%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+                <div class="skills__rate">
+                    <div class="title title_fs14 skills__rate-title">
+                        Soft skills
+                    </div>
+                    <div class="skills__rate-percent">95%</div>
+                    <div class="skills__rate-line">
+                        <div class="skills__rate-line_percent"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
