update .skills__info (html); add skills__info (scss)

--- a/src/index.html
+++ b/src/index.html
@@ -313,57 +313,69 @@
 
             <div class="skills__info">
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Створення сайтів
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Створення сайтів
+                        </div>
+                        <div class="skills__rate-percent">100%</div>
                     </div>
-                    <div class="skills__rate-percent">100%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 100%;"></div>
                     </div>
                 </div>
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Створення додатків
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Створення додатків
+                        </div>
+                        <div class="skills__rate-percent">85%</div>
                     </div>
-                    <div class="skills__rate-percent">85%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 85%;"></div>
                     </div>
                 </div>
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Робота з даними
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Робота з даними
+                        </div>
+                        <div class="skills__rate-percent">90%</div>
                     </div>
-                    <div class="skills__rate-percent">90%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Креативність
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Креативність
+                        </div>
+                        <div class="skills__rate-percent">75%</div>
                     </div>
-                    <div class="skills__rate-percent">75%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 75%;"></div>
                     </div>
                 </div>
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Створення дизайну
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Створення дизайну
+                        </div>
+                        <div class="skills__rate-percent">90%</div>
                     </div>
-                    <div class="skills__rate-percent">90%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skills__rate">
-                    <div class="title title_fs14 skills__rate-title">
-                        Soft skills
+                    <div>
+                        <div class="title title_fs14 skills__rate-title">
+                            Soft skills
+                        </div>
+                        <div class="skills__rate-percent">95%</div>
                     </div>
-                    <div class="skills__rate-percent">95%</div>
                     <div class="skills__rate-line">
-                        <div class="skills__rate-line_percent"></div>
+                        <div class="skills__rate-line_percent" style="width: 95%;"></div>
                     </div>
                 </div>
             </div>
