--- a/src/index.html
+++ b/src/index.html
@@ -412,6 +412,72 @@
             </div>
         </div>
     </section>
+
+    <section class="price">
+        <div class="container">
+            <h2 class="title title_fs16 title__section-title">Прайс-лист</h2>
+            <div class="divider divider_center"></div>
+            <div class="price__wrapper">
+                <ul>
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Landing-page</div>
+                            <div class="price__item-cost">від 3000 грн.</div>
+                            <div class="price__item-descr long-row">
+                                Односторінковий сайт для презентації послуг/товарів/...
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Корпоративний сайт</div>
+                            <div class="price__item-cost">від 7000 грн.</div>
+                            <div class="price__item-descr long-row">
+                                Сайт для вашого бізнесу або компанії
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Інтернет-магазин</div>
+                            <div class="price__item-cost">від 12000 грн.</div>
+                            <div class="price__item-descr long-row">
+                                Інструмент для ваших продажів у мережі
+                            </div>
+                        </div>
+                    </li>
+
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Web-додаток</div>
+                            <div class="price__item-cost">від 11000 грн.</div>
+                            <div class="price__item-descr long-row">
+                                Додаток усередині браузера для кращого комфорту
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Android/IOS Додаток</div>
+                            <div class="price__item-cost">від 10000 грн.</div>
+                            <div class="price__item-descr long-row">
+                                Сайт для вашого бізнесу або компанії
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="price__item">
+                            <div class="price__item-title">Дизайн</div>
+                            <div class="price__item-cost">Індивідуально</div>
+                            <div class="price__item-descr long-row">
+                                Створю дизайн для вашого сайту/додатку...
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
