--- a/src/index.html
+++ b/src/index.html
@@ -478,6 +478,62 @@
             </div>
         </div>
     </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__wrapper">
+                <div class="contacts__photo">
+                    <img src="img/main_photo.jpg" alt="me">
+                </div>
+                <div class="contacts__descr">
+                    <h2 class="title title_fs16 contacts__title">
+                        Контакти
+                    </h2>
+                    <div class="title contacts__subtitle">
+                        Зв'яжіться зі мною
+                    </div>
+                    <div class="divider"></div>
+
+                    <div class="title title_fs14 contacts__text">
+                        Будь-яким зручним для вас способом:
+                    </div>
+                    <div class="contacts__social">
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/telegram.svg" alt="telegram">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/viber.svg" alt="viber">
+                        </a>
+                        <a href="#" class="contacts__link">
+                            <img src="icons/social/instagram.svg" alt="instagram">
+                        </a>
+                    </div>
+                    <div class="title title_fs14 contacts__text">
+                        Або залиште ваші дані і я сам Вам напишу:
+                    </div>
+
+                    <form action="#" class="contacts__form">
+                        <div class="contacts__input">
+                            <input name="name" id="name" type="text">
+                            <label for="name">Ваше ім'я</label>
+                        </div>
+                        <div class="contacts__input">
+                            <input name="email" id="email" type="email">
+                            <label for="email">Ваша пошта</label>
+                        </div>
+                        <div class="contacts__textarea">
+                            <textarea name="text" id="text"></textarea>
+                            <label for="text">Ваше повідомлення</label>
+                        </div>
+                        <div>
+                            <button class="contacts__btn btn">Надіслати повідомлення</button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
