--- a/src/index.html
+++ b/src/index.html
@@ -514,7 +514,7 @@
 
                     <form action="#" class="contacts__form">
                         <div class="contacts__input">
-                            <input required name="name" id="name" type="text">
+                            <input required name="name" minlength="2" id="name" type="text">
                             <label for="name">Ваше ім'я</label>
                         </div>
                         <div class="contacts__input">
@@ -537,6 +537,7 @@
             </div>
         </div>
     </section>
+    <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
