--- a/src/index.html
+++ b/src/index.html
@@ -94,13 +94,12 @@
             </h1>
             <div class="promo__btns">
                 <a href="#" class="promo__link btn">Портфоліо</a>
-                <!-- promo__link_white should use with 'white text' promo_link -->
                 <a href="#" class="promo__link btn btn_hidden">Про мене</a>
             </div>
         </div>
     </section>
 
-    <section class="about-me">
+    <!-- <section class="about-me">
         <div class="container">
             <div class="about-me__wrapper">
                 <div class="about-me__photo">
@@ -536,7 +535,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+    
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
