--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
         </div>
     </section>
 
-    <!-- <section class="about-me">
+    <section class="about-me">
         <div class="container">
             <div class="about-me__wrapper">
                 <div class="about-me__photo">
@@ -156,7 +156,7 @@
         </div>
     </section>
 
-    <section class="experience">
+    <!-- <section class="experience">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Досвід</h2>
             <div class="title title__section-subtitle">
