--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,7 @@
         </div>
     </section>
 
-    <!-- <section class="experience">
+    <section class="experience">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Досвід</h2>
             <div class="title title__section-subtitle">
@@ -243,7 +243,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <!-- <section class="skills">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Навички</h2>
             <div class="title title__section-subtitle">
@@ -379,9 +379,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Портфоліо</h2>
             <div class="title title__section-subtitle">
@@ -410,9 +410,9 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="price">
+    <!-- <section class="price">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Прайс-лист</h2>
             <div class="divider divider_center"></div>
@@ -476,9 +476,9 @@
                 </ul>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
