--- a/src/index.html
+++ b/src/index.html
@@ -243,7 +243,7 @@
         </div>
     </section>
 
-    <!-- <section class="skills">
+    <section class="skills">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Навички</h2>
             <div class="title title__section-subtitle">
@@ -379,7 +379,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="portfolio">
         <div class="container">
