--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,12 @@
         <div class="container">
             <div class="about-me__wrapper">
                 <div class="about-me__photo">
-                    <img src="img/main_photo.jpg" alt="me">
+                    <!-- <img src="img/main_photo.jpg" alt="me"> -->
+                    <picture>
+                        <source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
+                        <source media="(min-width: 577px)" srcset="img/main_photo.jpg">
+                        <img src="img/main_photo.jpg" alt="me">
+                    </picture>
                 </div>
                 <div class="about-me__descr">
                     <h2 class="title title_fs16 about-me__title">
