--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,6 @@
         <div class="container">
             <div class="about-me__wrapper">
                 <div class="about-me__photo">
-                    <!-- <img src="img/main_photo.jpg" alt="me"> -->
                     <picture>
                         <source media="(max-width: 576px)" srcset="img/main_photo-min.jpg">
                         <source media="(min-width: 577px)" srcset="img/main_photo.jpg">
@@ -386,7 +385,7 @@
         </div>
     </section>
 
-    <!-- <section class="portfolio">
+    <section class="portfolio">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Портфоліо</h2>
             <div class="title title__section-subtitle">
@@ -415,7 +414,7 @@
                 </a>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="price">
         <div class="container">
