--- a/src/index.html
+++ b/src/index.html
@@ -416,11 +416,11 @@
         </div>
     </section>
 
-    <!-- <section class="price">
+    <section class="price">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Прайс-лист</h2>
             <div class="divider divider_center"></div>
-            <div class="price__wrapper">
+            <!-- <div class="price__wrapper">
                 <ul>
                     <li>
                         <div class="price__item">
@@ -478,9 +478,54 @@
                         </div>
                     </li>
                 </ul>
+            </div> -->
+
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <div class="price__item-title">Landing-page</div>
+                    <div class="price__item-cost">від 3000 грн.</div>
+                    <div class="price__item-descr long-row">
+                        Односторінковий сайт для презентації послуг/товарів/...
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="price__item-title">Web-додаток</div>
+                    <div class="price__item-cost">від 11000 грн.</div>
+                    <div class="price__item-descr long-row">
+                        Додаток усередині браузера для кращого комфорту
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="price__item-title">Корпоративний сайт</div>
+                    <div class="price__item-cost">від 7000 грн.</div>
+                    <div class="price__item-descr long-row">
+                        Сайт для вашого бізнесу або компанії
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="price__item-title">Android/IOS Додаток</div>
+                    <div class="price__item-cost">від 10000 грн.</div>
+                    <div class="price__item-descr long-row">
+                        Сайт для вашого бізнесу або компанії
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="price__item-title">Інтернет-магазин</div>
+                    <div class="price__item-cost">від 12000 грн.</div>
+                    <div class="price__item-descr long-row">
+                        Інструмент для ваших продажів у мережі
+                    </div>
+                </div>
+                <div class="price__item">
+                    <div class="price__item-title">Дизайн</div>
+                    <div class="price__item-cost">Індивідуально</div>
+                    <div class="price__item-descr long-row">
+                        Створю дизайн для вашого сайту/додатку...
+                    </div>
+                </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="contacts">
         <div class="container">
