--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
                     <h2 class="title title_fs16 about-me__title">
                         Про мене
                     </h2>
-                    <div class="title about-me__subtitle">
+                    <div class="title title_fs36 about-me__subtitle">
                         Мене звати Олег
                     </div>
                     <div class="divider"></div>
@@ -163,7 +163,7 @@
     <section class="experience">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Досвід</h2>
-            <div class="title title__section-subtitle">
+            <div class="title title_fs36 title__section-subtitle">
                 Чим я буду корисний
             </div>
             <div class="divider divider_center"></div>
@@ -250,7 +250,7 @@
     <section class="skills">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Навички</h2>
-            <div class="title title__section-subtitle">
+            <div class="title title_fs36 title__section-subtitle">
                 Що я використовую в роботі
             </div>
             <div class="divider divider_center"></div>
@@ -388,7 +388,7 @@
     <section class="portfolio">
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Портфоліо</h2>
-            <div class="title title__section-subtitle">
+            <div class="title title_fs36 title__section-subtitle">
                 Мої роботи
             </div>
             <div class="divider divider_center"></div>
@@ -420,66 +420,6 @@
         <div class="container">
             <h2 class="title title_fs16 title__section-title">Прайс-лист</h2>
             <div class="divider divider_center"></div>
-            <!-- <div class="price__wrapper">
-                <ul>
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Landing-page</div>
-                            <div class="price__item-cost">від 3000 грн.</div>
-                            <div class="price__item-descr long-row">
-                                Односторінковий сайт для презентації послуг/товарів/...
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Корпоративний сайт</div>
-                            <div class="price__item-cost">від 7000 грн.</div>
-                            <div class="price__item-descr long-row">
-                                Сайт для вашого бізнесу або компанії
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Інтернет-магазин</div>
-                            <div class="price__item-cost">від 12000 грн.</div>
-                            <div class="price__item-descr long-row">
-                                Інструмент для ваших продажів у мережі
-                            </div>
-                        </div>
-                    </li>
-
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Web-додаток</div>
-                            <div class="price__item-cost">від 11000 грн.</div>
-                            <div class="price__item-descr long-row">
-                                Додаток усередині браузера для кращого комфорту
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Android/IOS Додаток</div>
-                            <div class="price__item-cost">від 10000 грн.</div>
-                            <div class="price__item-descr long-row">
-                                Сайт для вашого бізнесу або компанії
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="price__item">
-                            <div class="price__item-title">Дизайн</div>
-                            <div class="price__item-cost">Індивідуально</div>
-                            <div class="price__item-descr long-row">
-                                Створю дизайн для вашого сайту/додатку...
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div> -->
-
             <div class="price__wrapper">
                 <div class="price__item">
                     <div class="price__item-title">Landing-page</div>
@@ -527,7 +467,7 @@
         </div>
     </section>
 
-    <!-- <section class="contacts">
+    <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -537,7 +477,7 @@
                     <h2 class="title title_fs16 contacts__title">
                         Контакти
                     </h2>
-                    <div class="title contacts__subtitle">
+                    <div class="title title_fs36 contacts__subtitle">
                         Зв'яжіться зі мною
                     </div>
                     <div class="divider"></div>
@@ -577,14 +517,16 @@
                             <button class="contacts__btn btn">Надіслати повідомлення</button>
                             <div class="contacts__policy">
                                 <input required type="checkbox">
-                                <span>Я згоден(а) з <a href="/policy.html">політикою конфіденційності</a></span>
+                                <span>Я згоден(а) з 
+                                    <a href="/policy.html">політикою конфіденційності</a>
+                                </span>
                             </div>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
