--- a/src/policy.html
+++ b/src/policy.html
@@ -196,12 +196,15 @@
                         В даному документі будуть відображені будь-які зміни політики обробки персональних даних Сайтом. Політика діє безстроково до заміни її новою версією.
                     </li>
                     <li>
-                        Актуальна версія Політики у вільному доступі розташована в мережі Інтернет за адресою http://sazonovoleg.com.ua/policy.html/.
+                        Актуальна версія Політики у вільному доступі розташована в мережі Інтернет за адресою:
+                        <br>
+                        http://sazonovoleg.com.ua/<wbr>policy.html/
                     </li>
                 </ol>
             </li>
         </ol>
     </div>
+    <a class="policy__link" href="/index.html">Повернутись на сайт</a>
    </section>
 </body>
 </html>
