add pageup (html + scss); add smooth scrolling + pageup scrolling (js)

--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
 
     </div>
 
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="hamburger">
             <span></span>
             <span class="long"></span>
@@ -540,6 +540,10 @@
         </div>
     </div>
     
+    <a href="#up" class="pageup" id="scrollToTop">
+        <img src="icons/chevron-up.svg" alt="up">
+    </a>
+
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
